# rag-evals

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  restructure_notebooks.py  setup.py
configs/: eval_basic.yaml  eval_full.yaml  eval_retriever.yaml
dashboard/: app.py
data/: golden_adversarial.json  golden_basic.json  golden_conversational.json  golden_multihop.json  knowledge_base.json  schema.json
integrations/: haystack_example.py  langchain_example.py  llamaindex_example.py
learning_tutor/: 01_what_are_evals.md  02_llm_evals_vs_traditional.md  03_evaluation_approaches.md  04_rag_evaluation_fundamentals.md  05_deepeval_complete_guide.md  06_ragas_complete_guide.md  07_retriever_metrics_deep_dive.md  08_generator_metrics_deep_dive.md  09_agentic_rag_evaluation.md  10_advanced_topics.md
ragevals/: __init__.py  __main__.py  chunking.py  cli.py  config.py  datasets.py  embeddings.py  evaluation.py  generator.py  history.py  metrics.py  pipeline.py  reports.py  retriever.py  vectorstore.py  visualization.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_datasets.py  test_history.py
workbooks/: 00_llm_as_a_judge.ipynb  01_environment_setup.ipynb  02_build_rag_pipeline.ipynb  03_deepeval_retriever_metrics.ipynb  03_retriever_metrics.ipynb  04_deepeval_generator_metrics.ipynb  04_generator_metrics.ipynb  05_deepeval_advanced.ipynb  05_geval_custom_metrics.ipynb  06_dag_metric.ipynb  06_ragas_core_metrics.ipynb  07_datasets_synthetic.ipynb  07_ragas_advanced.ipynb  (+4 more)
(+17 files in other folders)
